--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,13 @@ addons:
       name: "ddemidov/vexcl"
       description: "Build submitted via Travis CI"
     notification_email: dennis.demidov@gmail.com
-    build_command_prepend: mkdir build-coverity && cd build-coverity && cmake -DCMAKE_BUILD_TYPE=Release ..
+    build_command_prepend: mkdir build-coverity && cd build-coverity && cmake ..
     build_command: make
     branch_pattern: coverity_scan
 
 before_install:
     - sudo apt-get update -qq
-    - sudo apt-get install -qq fglrx=2:8.960-0ubuntu1 opencl-headers
+    - sudo apt-get install -qq fglrx opencl-headers
       libboost-chrono1.48-dev libboost-date-time1.48-dev libboost-filesystem1.48-dev
       libboost-system1.48-dev libboost-thread1.48-dev libboost-program-options1.48-dev
       libboost-test1.48-dev python-yaml lcov
